--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "specify-cli"
-version = "0.0.20"
-description = "Specify CLI, part of GitHub Spec Kit. A tool to bootstrap your projects for Spec-Driven Development (SDD)."
+name = "brainiac-cli"
+version = "0.0.1"
+description = "BrainIaC CLI, part of BrainIaC Framework. A tool to bootstrap your projects for Spec-Driven Infrastructure (SDI)."
 requires-python = ">=3.11"
 dependencies = [
     "typer",
@@ -13,7 +13,7 @@ dependencies = [
 ]
 
 [project.scripts]
-specify = "specify_cli:main"
+specify = "brainiac_cli:main"
 
 [build-system]
 requires = ["hatchling"]
