--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ dependencies = [
 ]
 
 [project.scripts]
-specify = "brainiac_cli:main"
+brainiac = "brainiac_cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/specify_cli"]
+packages = ["src/brainiac_cli"]
 
