--- a/templates/vscode-settings.json
+++ b/templates/vscode-settings.json
@@ -1,14 +1,14 @@
 {
     "chat.promptFilesRecommendations": {
-        "speckit.constitution": true,
-        "speckit.specify": true,
-        "speckit.plan": true,
-        "speckit.tasks": true,
-        "speckit.implement": true
+        "brainiac.constitution": true,
+        "brainiac.specify": true,
+        "brainiac.plan": true,
+        "brainiac.tasks": true,
+        "brainiac.implement": true
     },
     "chat.tools.terminal.autoApprove": {
-        ".specify/scripts/bash/": true,
-        ".specify/scripts/powershell/": true
+        ".brainiac/scripts/bash/": true,
+        ".brainiac/scripts/powershell/": true
     }
 }
 
